--- a/_sass/components/_projectlist.scss
+++ b/_sass/components/_projectlist.scss
@@ -17,9 +17,9 @@
 
   @media(min-width: $screen-sm) {
     flex-basis: 29%;
-    margin: 2%;
-    max-height: 100%;
+    margin: 2em 1em;
     margin-bottom: 0;
+    max-height: 100%;
   }
 
   @media(min-width: $screen-lg) {
